:construction: #21 show total items